# whatsapp-plus-mcp

./: .gitattributes  .gitignore  .goreleaser.yaml  .mcp.json  AUDIT.md  CHANGELOG.md  CLAUDE.md  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
whatsapp-bridge/: .golangci.yml  go.mod  go.sum  main.go  main_test.go
whatsapp-bridge/internal/api/: appstate_test.go  dto.go  routes_chats.go  routes_contacts.go  routes_groups.go  routes_messages.go  routes_session.go  server.go  server_httptest_test.go  server_test.go
whatsapp-bridge/internal/auth/: auth.go  auth_test.go
whatsapp-bridge/internal/config/: config.go  config_test.go
whatsapp-bridge/internal/media/: media.go  media_test.go
whatsapp-bridge/internal/store/: store.go  store_test.go
whatsapp-bridge/internal/wa/: dispatcher.go  dispatcher_test.go  events.go  events_test.go  helpers_test.go  parsing.go  parsing_test.go  service.go  service_test.go
whatsapp-mcp-server/: audio.py  main.py  pyproject.toml  test_bridge.py  test_db.py  test_delete_chat.py  test_login_tool.py  test_models.py  test_supervisor.py  test_transcription.py  test_whatsapp.py  whatsapp.py
whatsapp-mcp-server/whatsapp_mcp/: __init__.py  audio.py  bridge.py  config.py  db.py  models.py  prompts.py  server.py  tools.py  transcription.py
