[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-mcp-server"
version = "0.1.0"
description = "MCP server for a personal WhatsApp account (reads SQLite, writes via the Go bridge)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    # Tope <2: la v2 (~2026-07) trae breaking changes (FastMCP -> MCPServer, etc.).
    # Migrar a v2 es trabajo explicito de otra fase, no un `uv lock --upgrade` accidental.
    "mcp[cli]>=1.28.1,<2",
    "qrcode>=8.2",
    "requests>=2.34.2",
]

[tool.setuptools]
packages = ["whatsapp_mcp"]

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
    "ruff>=0.14.0",
    "pytest>=8.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Baseline en verde hoy: pycodestyle esenciales (E4/E7/E9), pyflakes (F) e isort (I).
# La modernización de type hints (UP), bugbear (B) y E501 se activan en la fase de
# refactor del server, cuando se toca whatsapp.py a fondo.
select = ["E4", "E7", "E9", "F", "I"]
